Feature/3.2/java 17 sonar fixes (#36)
Java 17 sonar fixes